--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                <h3 class="nav__name">Ajose</h3>
                <ul class="nav__list">
                   <li class="nav__item">
-                     <a href="#home" class="nav__link active-link">Home</a>
+                     <a href="#home" class="nav__link active-link">ome</a>
                   </li>
                   <li class="nav__item">
                      <a href="#about" class="nav__link">About</a>
