--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                <h3 class="nav__name">Ajose</h3>
                <ul class="nav__list">
                   <li class="nav__item">
-                     <a href="#home" class="nav__link active-link">ome</a>
+                     <a href="#home" class="nav__link active-link">Home</a>
                   </li>
                   <li class="nav__item">
                      <a href="#about" class="nav__link">About</a>
@@ -306,10 +306,10 @@
 
                   <div class="projects__content">
                      <h3 class="projects__subtitle">Website</h3>
-                     <h2 class="projects__title">ZoomScoots Web Application</h2>
+                     <h2 class="projects__title">Weelr Mobile Application</h2>
 
                      <p class="projects__description">
-                        This web app is the heart of innovative transportation. It empowers users to easily locate, rent, and enjoy E-Scooters within their communities.
+                        This web app is the heart of innovative transportation. It empowers users to easily locate, rent, and enjoy rides within their communities.
                      </p>
                   </div>
 
